# hotel_manager

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
